# tool-library

./: .gitignore  .gitmodules  Cross.toml  Makefile  README.md  action-plan.md  plan.md
.github/: vendor-release.json
.github/scripts/: plan-vendor-release.mjs
.github/workflows/: release-vendor.yml
bash/: README.md  manifest.json
core/bash/: .mcpbignore  Cargo.toml  manifest.json
core/bash/src/: main.rs
core/elicitation/: .mcpbignore  Cargo.toml  README.md  manifest.json
core/elicitation/src/: main.rs
core/filesystem/: .mcpbignore  README.md  manifest.json
core/filesystem/src/: lib.rs  main.rs
core/plugins/: Cargo.toml  manifest.json
core/plugins/src/: main.rs
core/plugins/src/tools/: mod.rs  search.rs
core/system/: Cargo.toml  manifest.json
core/system/src/: main.rs
core/terminal/: Cargo.toml  README.md  manifest.json
core/terminal/lib/: config.rs  lib.rs  server.rs  types.rs
core/terminal/lib/input/: keys.rs  mod.rs  paste.rs
core/terminal/lib/pty/: env.rs  session.rs
core/terminal/lib/session/: manager.rs  mod.rs  reader.rs  session.rs
core/terminal/lib/socket/: mod.rs
core/terminal/lib/terminal/: cursor.rs  mod.rs  prompt.rs  scrollback.rs  tracker.rs
core/terminal/lib/tools/: create_session.rs  destroy_session.rs  info.rs  list_sessions.rs  read.rs
core/terminal/tests/: integration.rs
core/todolist/: Cargo.toml  README.md  manifest.json
core/todolist/src/: lib.rs
core/web/: .gitignore  Cargo.toml  README.md  manifest.json
core/web/src/: lib.rs
filesystem/: .gitignore  README.md  manifest.json
plugins/: .mcpbignore  manifest.json
plugins/src/: lib.rs
plugins/src/tools/: resolve.rs
scripts/: release.sh  vendor-release.sh
system/: README.md
system/src/: lib.rs
terminal/: .mcpbignore  README.md
terminal/lib/pty/: mod.rs
terminal/lib/socket/: protocol.rs
terminal/lib/terminal/: ansi.rs  emulator.rs  screen.rs  state.rs
terminal/lib/tools/: mod.rs  send.rs
test/auth/: Cargo.toml  README.md  manifest.json
test/auth/src/: lib.rs  main.rs
test/hello/: Cargo.toml  README.md  manifest.json
test/hello/src/: lib.rs  main.rs
todolist/: .mcpbignore
todolist/src/: lib.rs  main.rs
web/: .mcpbignore
web/tests/: integration.rs
