[package]
name = "system"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
thiserror = "2"
