[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terminal"
path = "bin/main.rs"

[lib]
name = "terminal"
path = "lib/lib.rs"

[dependencies]
# MCP protocol
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }

# PTY
portable-pty = "0.8"

# Terminal emulation
vte = "0.13"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time", "signal", "net"] }

# Terminal UI (for CLI)
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Ctrl+C handling
ctrlc = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Utilities
regex = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
unicode-width = "0.2"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
