[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
htmd = "0.1"
scraper = "0.22"
url = "2"
urlencoding = "2"
