[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.10", features = ["server", "macros", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
rand = "0.9"
base64 = "0.22"
